--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     checkmate,
+    cli,
+    curl,
     purrr,
+    RCurl,
     rlang,
     rvest,
     tibble
 URL: https://rfsaldanha.github.io/zenstats/
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
