--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.1
 Authors@R: 
     person("Raphael", "Saldanha", , "raphael.de-freitas-saldanha@inria.fr", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0652-8466"))
-Description: Fetch statistics about views, downloads and data volume from 'Zenodo' deposits.
+Description: Fetch statistics about views, downloads and data volume from 'Zenodo' deposits. The package collects a 'Zenodo' (<https://zenodo.org>) deposit file information, respecting the website scrapping policies.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
